# gps-tracker

./: Cargo.toml  README.md  benchmark.md
munjushree/: README.md  bun.lockb  capacitor.config.ts  package.json
munjushree/android/: capacitor.settings.gradle
munjushree/android/app/: build.gradle  capacitor.build.gradle
munjushree/android/app/src/main/: AndroidManifest.xml
munjushree/android/app/src/main/java/com/munjushree/app/: MainActivity.java
munjushree/android/app/src/main/res/values/: strings.xml
munjushree/src/: main.ts
munjushree/src/assets/: main.css
munjushree/src/components/: TheWelcome.vue
munjushree/src/stores/: counter.ts
munjushree/src/views/: AboutView.vue  HomeView.vue
src/: handlers.rs  index.html  main.rs
