[package]
name = "ride_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = "0.4.1"
tower = { version = "0.4.13" }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
serde = "1.0.159"
axum = { version = "0.6.10" }
tokio = { version = "1.13.0", features = ["full"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"